--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "shot": "^1.4.2"
   },
   "devDependencies": {
+    "ecstatic": "^0.6.1",
     "mocha": "^2.2.0",
     "mongoose": "^3.8.24"
   },
